<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YanKiba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chargement">Chargement</string>
    <string name="title_activity_chargement_base">ChargementBase</string>
    <string name="phoneNumber"></string>
    <string name="producer">YanKiba Corp</string>
    <string name="follow">OK</string>
    <string name="cancel">Annuler </string>
    <string name="pref"></string>
    <string name="pseudo"></string>
    <string name="insertion">Entrez le nom d \' utilisateur ici</string>
    <string name="remarque">Bienvenu Dans l application YanKiba :D Veuillez entrez un nom d \' utilisateur ci-dessous</string>
    <string name="title_activity_nouveau_user">NouveauUser</string>
    <string name="title_activity_recherche">RechercheActivity</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="recherche">Recherche</string>
    <string name="chat">Chat</string>
    <string name="strBtnChat">Chat</string>
    <string name="strBtnRecherche">Rechercher</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="editRech">Pseudo</string>
    <string name="btnEnvoi">Envoyer</string>
    <string name="hintEditMsg">Entrer un message</string>
    <string name="RechResult">Resultat: </string>
    <string name="refresh">Actualiser</string>

</resources>
