<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RechercheActivity" >

    <Button
        android:id="@+id/btnChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/strBtnChat" />

    <EditText
        android:id="@+id/strRech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRech"
        android:layout_alignBottom="@+id/btnRech"
        android:layout_alignLeft="@+id/btnChat"
        android:layout_toLeftOf="@+id/btnRech"
        android:hint="@string/editRech"
        android:inputType="text"
        android:ems="10" />

    <Button
        android:id="@+id/btnRech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnChat"
        android:layout_below="@+id/btnChat"
        android:text="@string/strBtnRecherche" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRech"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/strRech"
        android:layout_below="@+id/btnRech"
        android:layout_marginTop="20dp"
        android:text="@string/RechResult" />

</RelativeLayout>
