<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChatActivity" >

    <Button
        android:id="@+id/btnEnvoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="20dp"
        android:text="@string/btnEnvoi" />

    <EditText
        android:id="@+id/editMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/btnEnvoi"
        android:layout_alignBottom="@id/btnEnvoi"
        android:layout_toLeftOf="@id/btnEnvoi"
        android:ems="10"
        android:hint="@string/hintEditMsg" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnEnvoi"
        android:layout_marginTop="25dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" >
        </ListView>

    </LinearLayout>

 <!--    <ListView
       android:id="@+id/listView1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/linearLayout1"
       android:layout_alignLeft="@+id/editMsg"
       android:scrollbars="vertical" >
   </ListView>-->

    <Button
        android:id="@+id/btnRefresh"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/refresh" />

</RelativeLayout>